# REMAPSEM

./: .gitignore
STREAM/: Makefile  run-linux-benchmark.sh  setup-linux-benchmark.sh
sha256/: CMakeLists.txt  create-object-dumps.sh  research.c  run-benchmarks.sh  sha256.c  sha256_test.c  sha256sum.c  simdsha256.c  simdsha256sum.c  vsha256.c  vsha256.h  vsha256sum.c
stream/: Makefile  benchmark-configuration.sh  run-aix-benchmark.sh  run-linux-benchmark.sh  setup-linux-benchmark.sh  stream.c
